--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/SASS/style.css">
     <title>Ohmyfood</title>
 </head>
@@ -12,13 +13,27 @@
     <div class="main-container">
         <header>
             <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
-            <i class="fa-solid fa-location-dot"></i>
+            <div class="header"> 
             <form class="header_form" method="get">
-
+                <i class="fa-solid fa-location-dot"></i>
                 <input type="search" placeholder="Rechercher un restaurant" name="search" required>
                 <!-- <button type="submit">Rechercher</button> -->
             </form>
+        </div>
         </header>
+        <div class="about">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a class="about__link" href="">Explorer nos restaurants</a>
+        </div>
+        <section class="howto">
+            <h2>Fonctionnement</h2>
+            <div class="howto__cards">
+                <a class="cards" href="">Choisissez un restaurant</a>
+                <a class="cards" href="">Composez votre menu</a>
+                <a class="cards" href="">Dégustez au restaurant</a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
