Modification de la partie Fonctionnement

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section class="howto">
             <h2>Fonctionnement</h2>
             <div class="howto__cards">
-                <a class="cards" href="">Choisissez un restaurant</a>
-                <a class="cards" href="">Composez votre menu</a>
-                <a class="cards" href="">Dégustez au restaurant</a>
+                <a class="cards" href=""><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                <a class="cards" href=""><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+                <a class="cards" href=""><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
             </div>
         </section>
     </div>
