--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </form>
         </div>
         </header>
-        <div class="about">
+        <div class="about content-background">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <a class="about__link" href="">Explorer nos restaurants</a>
@@ -29,11 +29,64 @@
         <section class="howto">
             <h2>Fonctionnement</h2>
             <div class="howto__cards">
-                <a class="cards" href=""><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
-                <a class="cards" href=""><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
-                <a class="cards" href=""><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+                <article class="cards">
+                    <div class="circle white">
+                        <p>1</p>
+                    </div>
+                    <a class="black" href=""><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                </article>
+                <article class="cards">
+                    <div class="circle white">
+                        <p>2</p>
+                    </div>
+                    <a class="black" href=""><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+                </article>
+                <article class="cards">
+                    <div class="circle white">
+                        <p>3</p>
+                    </div>
+                    <a class="black" href=""><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+                </article>
             </div>
         </section>
+        <section class="restaurant">
+            <div class="restaurant-cards content-background">
+                <h2>Restaurants</h2>
+                <figure>
+                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La Palette du Goût">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </figure>
+                <figure>
+                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                </figure>
+                <figure>
+                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                    <h3>À la française</h3>
+                    <p>Cité rouge</p>
+                </figure>
+                <figure>
+                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                </figure>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img class="footer-logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+                </div>
+                <ul class="footer-links white">
+                    <li><a href="">Proposer un restaurant</a></li>
+                    <li><a href=""></a>Devenir partenaire</li>
+                    <li><a href=""></a>Mentions légales</li>
+                    <li><a href=""></a>Contact</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
