--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
             <div class="header"> 
-            <form class="header_form" method="get">
+            <form class="header__form" method="get">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="search" placeholder="Rechercher un restaurant" name="search" required>
                 <!-- <button type="submit">Rechercher</button> -->
@@ -52,25 +52,29 @@
         <section class="restaurant">
             <div class="restaurant-cards content-background">
                 <h2>Restaurants</h2>
-                <figure>
+                <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La Palette du Goût">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
+                    <i class="fa-regular fa-heart"></i>
                 </figure>
-                <figure>
+                <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
+                    <i class="fa-regular fa-heart"></i>
                 </figure>
-                <figure>
+                <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                     <h3>À la française</h3>
                     <p>Cité rouge</p>
+                    <i class="fa-regular fa-heart"></i>
                 </figure>
-                <figure>
+                <figure class="marginbas cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
+                    <p class="marginbas">Folie-Méricourt</p>
+                    <i class="fa-regular fa-heart"></i>
                 </figure>
             </div>
         </section>
