--- a/index.html
+++ b/index.html
@@ -52,30 +52,38 @@
         <section class="restaurant">
             <div class="restaurant-cards content-background">
                 <h2>Restaurants</h2>
+            <a href="/la-palette-du-gout.html">
                 <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La Palette du Goût">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                     <i class="fa-regular fa-heart"></i>
                 </figure>
+            </a>
+            <a href="/la-note-enchantée.html">
                 <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                     <i class="fa-regular fa-heart"></i>
                 </figure>
+            </a>   
+            <a href="/a-la-francaise.html">
                 <figure class="cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                     <h3>À la française</h3>
                     <p>Cité rouge</p>
                     <i class="fa-regular fa-heart"></i>
                 </figure>
+            </a>   
+            <a href="/le-délice-des-sens.html"> 
                 <figure class="marginbas cards-radius">
                     <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     <h3>Le délice des sens</h3>
                     <p class="marginbas">Folie-Méricourt</p>
                     <i class="fa-regular fa-heart"></i>
                 </figure>
+            </a>     
             </div>
         </section>
         <footer>
@@ -84,7 +92,7 @@
                     <img class="footer-logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
                 </div>
                 <ul class="footer-links white">
-                    <li><a href="">Proposer un restaurant</a></li>
+                    <li><a class="white" href="">Proposer un restaurant</a></li>
                     <li><a href=""></a>Devenir partenaire</li>
                     <li><a href=""></a>Mentions légales</li>
                     <li><a href=""></a>Contact</li>
