Modification du style des pages menus

--- a/index.html
+++ b/index.html
@@ -86,16 +86,18 @@
             </a>     
             </div>
         </section>
+
+         <!--   footer section   -->
         <footer>
             <div class="footer-container">
                 <div class="footer-logo">
                     <img class="footer-logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
                 </div>
-                <ul class="footer-links white">
-                    <li><a class="white" href="">Proposer un restaurant</a></li>
-                    <li><a href=""></a>Devenir partenaire</li>
-                    <li><a href=""></a>Mentions légales</li>
-                    <li><a href=""></a>Contact</li>
+                <ul class="footer__links white">
+                    <li><a href="#"><i class="fas fa-utensils white footer__links--icon"></i></a>Proposer un restaurant</li>
+                    <li><a href="#"><i class="fas fa-hands-helping white footer__links--icon"></i></a>Devenir partenaire</li>
+                    <li><a href="#"></a>Mentions légales</li>
+                    <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
                 </ul>
             </div>
         </footer>
