Ajouts d'animations CSS

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -194,15 +194,13 @@
 
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="footer-logo">
-                <img class="footer-logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-            </div>
-            <ul class="footer-links white">
-                <li><a href="#"><i class="fas fa-utensils white footer__links--icon"></i></a>Proposer un restaurant</li>
-                <li><a href="#"><i class="fas fa-hands-helping white footer__links--icon"></i></a>Devenir partenaire</li>
-                <li><a href=""></a>Mentions légales</li>
-                <li><a href=""></a>Contact</li>
+        <div class="footer__container">
+            <h1 class="footer__container--logo">Ohmyfood</h1>
+            <ul class="footer__container--links white">
+                <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
+                <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
+                <li><a href="#"></a>Mentions légales</li>
+                <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
             </ul>
         </div>
     </footer>
