--- a/index.html
+++ b/index.html
@@ -50,52 +50,91 @@
             </div>
         </section>
         <section class="restaurant">
-            <div class="restaurant-cards content-background">
+            <div class="restaurant content__background">
                 <h2>Restaurants</h2>
-            <a href="/la-palette-du-gout.html">
-                <figure class="cards-radius">
-                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La Palette du Goût">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <i class="fa-regular fa-heart"></i>
-                </figure>
-            </a>
-            <a href="/la-note-enchantée.html">
-                <figure class="cards-radius">
-                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                    <i class="fa-regular fa-heart"></i>
-                </figure>
-            </a>   
-            <a href="/a-la-francaise.html">
-                <figure class="cards-radius">
-                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                    <h3>À la française</h3>
-                    <p>Cité rouge</p>
-                    <i class="fa-regular fa-heart"></i>
-                </figure>
-            </a>   
-            <a href="/le-délice-des-sens.html"> 
-                <figure class="marginbas cards-radius">
-                    <img class="restaurant__img" src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                    <h3>Le délice des sens</h3>
-                    <p class="marginbas">Folie-Méricourt</p>
-                    <i class="fa-regular fa-heart"></i>
-                </figure>
-            </a>     
+                <article class="restaurant__cards">
+                    <a href="la-palette-du-gout.html">
+                        <div class="restaurant__cards--img">
+                            <img src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" photo du plat, du restaurant la palette du goût">
+                            <div class="restaurant__cards--img--markerinfo">
+                                <p>Nouveau</p>
+                            </div>
+                        </div>
+                        <div class="restaurant__cards--info">
+                            <div class="restaurant__cards--text">
+                                <h4>La palette du goût</h4>
+                                <p>Ménilmontant</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="restaurant__cards--like">
+                        <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                </article>
+                <article class="restaurant__cards">
+                    <a href="la-note-enchantée.html">
+                        <div class="restaurant__cards--img">
+                            <img src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
+                            <div class="restaurant__cards--img--markerinfo">
+                                <p>Nouveau</p>
+                            </div>
+                        </div>
+                        <div class="restaurant__cards--info">
+                            <div class="restaurant__cards--text">
+                                <h4>La note enchantée</h4>
+                                <p>Charonne</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="restaurant__cards--like">
+                        <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                </article>
+
+                <article class="restaurant__cards">
+                    <a href="a-la-francaise.html">
+                        <div class="restaurant__cards--img">
+                            <img src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du plat, du restaurant à la francaise">
+                        </div>
+                        <div class="restaurant__cards--info">
+                            <div class="restaurant__cards--text">
+                                <h4>À la française </h4>
+                                <p>Cité Rouge</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="restaurant__cards--like">
+                        <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                </article>
+
+                <article class="restaurant__cards">
+                    <a href="le-délice-des-sens.html">
+                        <div class="restaurant__cards--img">
+                            <img src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du plat, du restaurant la délice des sens">
+                        </div>
+                        <div class="restaurant__cards--info">
+                            <div class="restaurant__cards--text">
+                                <h4>Le délice des sens</h4>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="restaurant__cards--like">
+                        <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                </article>
+            </div>
             </div>
         </section>
 
          <!--   footer section   -->
         <footer>
-            <div class="footer-container">
-                <div class="footer-logo">
-                    <img class="footer-logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-                </div>
-                <ul class="footer__links white">
-                    <li><a href="#"><i class="fas fa-utensils white footer__links--icon"></i></a>Proposer un restaurant</li>
-                    <li><a href="#"><i class="fas fa-hands-helping white footer__links--icon"></i></a>Devenir partenaire</li>
+            <div class="footer__container">
+                <h1 class="footer__container--logo">Ohmyfood</h1>
+                <ul class="footer__container--links white">
+                    <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
+                    <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
                     <li><a href="#"></a>Mentions légales</li>
                     <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
                 </ul>
