--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
             <form class="header__form" method="get">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="search" placeholder="Rechercher un restaurant" name="search" required>
-                <!-- <button type="submit">Rechercher</button> -->
             </form>
         </div>
         </header>
         <div class="about content-background">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="about__link" href="">Explorer nos restaurants</a>
+            <a class="about__link white" href="">Explorer nos restaurants</a>
         </div>
         <section class="howto">
             <h2>Fonctionnement</h2>
@@ -33,19 +32,19 @@
                     <div class="circle white">
                         <p>1</p>
                     </div>
-                    <a class="black" href=""><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                    <a class="black" href="#"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
                 </article>
                 <article class="cards">
                     <div class="circle white">
                         <p>2</p>
                     </div>
-                    <a class="black" href=""><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+                    <a class="black" href="#"><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
                 </article>
                 <article class="cards">
                     <div class="circle white">
                         <p>3</p>
                     </div>
-                    <a class="black" href=""><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+                    <a class="black" href="#"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
                 </article>
             </div>
         </section>
@@ -56,12 +55,12 @@
                     <a href="la-palette-du-gout.html">
                         <div class="restaurant__cards--img">
                             <img src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" photo du plat, du restaurant la palette du goût">
-                            <div class="restaurant__cards--img--markerinfo">
+                            <div class="restaurant__cards--img--new">
                                 <p>Nouveau</p>
                             </div>
                         </div>
                         <div class="restaurant__cards--info">
-                            <div class="restaurant__cards--text">
+                            <div class="restaurant__cards--text black">
                                 <h4>La palette du goût</h4>
                                 <p>Ménilmontant</p>
                             </div>
@@ -75,12 +74,12 @@
                     <a href="la-note-enchantée.html">
                         <div class="restaurant__cards--img">
                             <img src="/assets/Images_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
-                            <div class="restaurant__cards--img--markerinfo">
+                            <div class="restaurant__cards--img--new">
                                 <p>Nouveau</p>
                             </div>
                         </div>
                         <div class="restaurant__cards--info">
-                            <div class="restaurant__cards--text">
+                            <div class="restaurant__cards--text black">
                                 <h4>La note enchantée</h4>
                                 <p>Charonne</p>
                             </div>
@@ -97,7 +96,7 @@
                             <img src="/assets/Images_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du plat, du restaurant à la francaise">
                         </div>
                         <div class="restaurant__cards--info">
-                            <div class="restaurant__cards--text">
+                            <div class="restaurant__cards--text black">
                                 <h4>À la française </h4>
                                 <p>Cité Rouge</p>
                             </div>
@@ -114,7 +113,7 @@
                             <img src="/assets/Images_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du plat, du restaurant la délice des sens">
                         </div>
                         <div class="restaurant__cards--info">
-                            <div class="restaurant__cards--text">
+                            <div class="restaurant__cards--text black">
                                 <h4>Le délice des sens</h4>
                                 <p>Folie-Méricourt</p>
                             </div>
