--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -17,7 +17,9 @@
             <a href="index.html">
                 <i class="fa-solid fa-arrow-right fa-flip-horizontal header__back"></i>
             </a>
-            <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
+            <a href="index.html">
+                <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
+            </a>
         </div>
     </header>
     <main>
