Suppression d'elements inutiles

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </section>
 
          <!--   footer section   -->
+
         <footer>
             <div class="footer__container">
                 <h1 class="footer__container--logo">Ohmyfood</h1>
@@ -135,7 +136,7 @@
                     <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
                     <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
                     <li><a href="#"></a>Mentions légales</li>
-                    <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
+                    <li><a href="contact@ohmyfood.fr"></a>Contact</li>
                 </ul>
             </div>
         </footer>
