--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -126,7 +126,6 @@
 
                         </div>
                     
-
                     <div class="menu__type">
                         <h3 class="menu-type__heading">Desserts</h3>
                         <div class="menu-cards">
@@ -189,7 +188,7 @@
                 <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
                 <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
                 <li><a href="#"></a>Mentions légales</li>
-                <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.fr"></a>Contact</li>
             </ul>
         </div>
     </footer>
