--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -188,7 +188,7 @@
                 <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
                 <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
                 <li><a href="#"></a>Mentions légales</li>
-                <li><a href="mailto:avotreecoute@ohmyfood.fr"></a>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.fr"></a>Contact</li>
             </ul>
         </div>
     </footer>
