Ajout de la rotation sur les cards du menu

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -25,7 +25,7 @@
     <main>
         <section class="entete__restaurant">
             
-            <img class="entete__restaurant--img"" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            <img class="entete__restaurant--img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             
             <div class="menu">
                 <div class="menu__heading">
@@ -184,13 +184,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div>     
                 <div class="menu__orderbtn">
                     <button type="submit" class="hero__btngradient">Commander</button>
                 </div>
-
-        </div>
     </section>
 
     </main>
