Ajouts de commentaires

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+
+    <!--    Header    -->
+
     <header>
         <div class="header-menu">
             <a href="index.html">
@@ -27,6 +30,8 @@
             
             <img class="entete__restaurant--img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             
+            <!--    Menu    -->
+
             <div class="menu">
                 <div class="menu__heading">
                     <h2>À la française</h2>
@@ -177,6 +182,9 @@
     </section>
 
     </main>
+
+    <!--    Footer    -->
+
     <footer>
         <div class="footer__container">
             <h1 class="footer__container--logo">Ohmyfood</h1>
