--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="main-container">
+
+    <!--    Header    -->
+
         <header>
             <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
             <div class="header"> 
@@ -20,6 +23,9 @@
             </form>
         </div>
         </header>
+
+        <!--    Info    -->
+
         <div class="about content-background">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
@@ -48,6 +54,9 @@
                 </article>
             </div>
         </section>
+
+        <!--    Restaurant    -->
+
         <section class="restaurant">
             <div class="restaurant content__background">
                 <h2>Restaurants</h2>
@@ -126,6 +135,9 @@
             </div>
             
         </section>
+
+        <!--    Footer    -->
+
         <footer>
             <div class="footer__container">
                 <h1 class="footer__container--logo">Ohmyfood</h1>
@@ -137,6 +149,15 @@
                 </ul>
             </div>
         </footer>
+
+        <!--    Loader    -->
+
+        <div class="loader-container">
+            <div class="loader">
+                <i class="fa-solid fa-spinner"></i>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
