--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+
+    <!--    Header    -->
+
     <header>
         <div class="header-menu">
             <a href="index.html">
@@ -23,6 +26,9 @@
         </div>
     </header>
     <main>
+
+    <!--    Menu    -->
+
         <section class="entete__restaurant">
             
             <img class="entete__restaurant--img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
@@ -176,6 +182,9 @@
                 </div>
     </section>
     </main>
+
+    <!--    Footer    -->
+
     <footer>
         <div class="footer__container">
             <h1 class="footer__container--logo">Ohmyfood</h1>
