Ajouts du loader

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         <!--    Loader    -->
 
         <div class="loader-container">
-            <div class="loader">
-                <i class="fa-solid fa-spinner"></i>
+            <div class="loader-spinner">
             </div>
         </div>
 
