Modification du header

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -21,7 +21,7 @@
             <i class="fa-solid fa-arrow-right fa-flip-horizontal header__back"></i>
         </a>
         <a href="index.html">
-            <img class="header__logo" src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
+            <img src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
         </a>
     </div>
     </header>
