Modification des balises img

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -6,8 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/SASS/style.css">
-    <link rel="stylesheet" href="/SASS/pages/menu.css">
+    <link rel="stylesheet" href="SASS/style.css">
+    <link rel="stylesheet" href="SASS/pages/menu.css">
     <title>À la française</title>
 </head>
 
@@ -21,14 +21,14 @@
                 <i class="fa-solid fa-arrow-right fa-flip-horizontal header__back"></i>
             </a>
             <a href="index.html">
-                <img src="/assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
+                <img src="assets/Images_textes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Ohmyfood">
             </a>
         </div>
     </header>
     <main>
         <section class="entete__restaurant">
             
-            <img class="entete__restaurant--img" src="/assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            <img class="entete__restaurant--img" src="assets/Images_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             
             <!--    Menu    -->
 
