Modification du style responsive de la partie fonctionnement

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <section class="restaurant">
             <div class="restaurant content__background">
                 <h2>Restaurants</h2>
+
+            <div class="restaurant__container">
                 <article class="restaurant__cards">
                     <a href="la-palette-du-gout.html">
                         <div class="restaurant__cards--img">
@@ -132,6 +134,7 @@
                         <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
                     </div>
                 </article>
+            </div>
             </div>
             
         </section>
