La partie responsive de l'index est terminé

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!--    Restaurant    -->
 
         <section class="restaurant">
-            <div class="restaurant content__background">
+            <div class=" content__background">
                 <h2>Restaurants</h2>
 
             <div class="restaurant__container">
@@ -145,10 +145,10 @@
             <div class="footer__container">
                 <h1 class="footer__container--logo">Ohmyfood</h1>
                 <ul class="footer__container--links white">
-                    <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
-                    <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
-                    <li><a href="#"></a>Mentions légales</li>
-                    <li><a href="contact@ohmyfood.fr"></a>Contact</li>
+                    <li><a class="footer__nav" href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
+                    <li><a class="footer__nav" href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
+                    <li><a class="footer__nav--info" href="#"></a>Mentions légales</li>
+                    <li><a class="footer__nav--info" href="contact@ohmyfood.fr"></a>Contact</li>
                 </ul>
             </div>
         </footer>
