Ajout de l'animation d'apparition des plats

--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -39,7 +39,7 @@
                     <button type="submit" class="button__like"><i class="far fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type">
+                    <div class="menu__type fade-in">
                         <h3 class="menu-type__heading">Entrées</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="menu__type">
+                    <div class="menu__type fade-in--2">
                         <h3 class="menu-type__heading">Plats</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -132,7 +132,7 @@
                         </div>
                     
 
-                    <div class="menu__type">
+                    <div class="menu__type fade-in--3">
                         <h3 class="menu-type__heading">Desserts</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -176,10 +176,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="menu__orderbtn">
+                        <button type="submit" class="hero__btngradient">Commander</button>
+                    </div>
                 </div>
-                <div class="menu__orderbtn">
-                    <button type="submit" class="hero__btngradient">Commander</button>
-                </div>
+                
     </section>
     </main>
 
