--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -38,7 +38,7 @@
                     <button type="submit" class="button__like"><i class="far fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type">
+                    <div class="menu__type fade-in">
                         <h3 class="menu-type__heading">Entrées</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -95,10 +95,10 @@
                             <div class="menu-cards__checkout">
                             </div>
                         </div>
-                        </div>
+                    </div>
                     
 
-                    <div class="menu__type">
+                    <div class="menu__type fade-in--2">
                         <h3 class="menu-type__heading">Plats</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
 
-                    <div class="menu__type">
+                    <div class="menu__type fade-in--3">
                         <h3 class="menu-type__heading">Desserts</h3>
                         <div class="menu-cards">
                             <div class="menu-cards__info">
@@ -189,10 +189,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="menu__orderbtn">
+                        <button type="submit" class="hero__btngradient">Commander</button>
+                    </div>
                 </div>     
-                <div class="menu__orderbtn">
-                    <button type="submit" class="hero__btngradient">Commander</button>
-                </div>
+                
     </section>
 
     </main>
