Modification de la partie fonctionnement

--- a/index.html
+++ b/index.html
@@ -32,27 +32,36 @@
             <a class="about__link white" href="">Explorer nos restaurants</a>
         </div>
         <section class="howto">
+        <div class="howto__container">
             <h2>Fonctionnement</h2>
             <div class="howto__cards">
                 <article class="cards">
+                <div class="cards__content">
                     <div class="circle white">
                         <h3>1</h3>
                     </div>
                     <a class="black" href="#"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                </div>
                 </article>
                 <article class="cards">
+                <div class="cards__content">
                     <div class="circle white">
                         <h3>2</h3>
                     </div>
                     <a class="black" href="#"><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+                </div>
                 </article>
                 <article class="cards">
+                <div class="cards__content">
                     <div class="circle white">
                         <h3>3</h3>
                     </div>
+                
                     <a class="black" href="#"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+                </div>
                 </article>
             </div>
+        </div>
         </section>
 
         <!--    Restaurant    -->
