Modification du conteneur des menus et des cards du menu

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -38,9 +38,9 @@
                     <button type="submit" class="button__like"><i class="far fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type fade-in">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Entrées</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Tartare de poulpe acidulé</h4>
@@ -54,7 +54,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Velouté de légumes d'antan</h4>
@@ -68,7 +68,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Soupe à l'oignon</h4>
@@ -85,9 +85,9 @@
                         </div>
                     </div>
 
-                    <div class="menu__type fade-in--2">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Plats</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Coquille Saint-Jacques</h4>
@@ -101,7 +101,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Magret de canard</h4>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Pigeonneau d'Ille-et-Vilaine</h4>
@@ -131,9 +131,9 @@
 
                         </div>
                     
-                    <div class="menu__type fade-in--3">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Desserts</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Pétales de violettes glacés</h4>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Fondant au chocolat</h4>
@@ -161,7 +161,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Millefeuille croustillant</h4>
