--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -38,9 +38,9 @@
                     <button type="submit" class="button__like"><i class="far fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type fade-in">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Entrées</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Ravioles de foie gras</h4>
@@ -54,7 +54,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Caviar osciètre</h4>
@@ -68,7 +68,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Homard et espuma de potiron</h4>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--4">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Foie gras de canard cuit entier</h4>
@@ -98,9 +98,9 @@
                     </div>
                     
 
-                    <div class="menu__type fade-in--2">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Plats</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Noix de coquilles Saint-Jacques</h4>
@@ -114,7 +114,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Langoustine poêlée</h4>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Mijoté de queue de bœuf</h4>
@@ -145,9 +145,9 @@
                         </div>
                     </div>
 
-                    <div class="menu__type fade-in--3">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Desserts</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Macaron noisette et chocolat</h4>
@@ -161,7 +161,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Baba au rhum revisité</h4>
@@ -175,7 +175,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Tarte au citron meringuée</h4>
