--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -38,9 +38,9 @@
                     <button type="submit" class="button__like"><i class="fa-regular fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type fade-in">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Entrées</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Fricassée d'escargots</h4>
@@ -54,7 +54,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Foie gras de canard mi-cuit</h4>
@@ -68,7 +68,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Oeuf au plat</h4>
@@ -86,9 +86,9 @@
                         </div>
                     </div>
 
-                    <div class="menu__type fade-in--2">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Plats</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Filet de boeuf aux herbes</h4>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Parmentier de queue de boeuf</h4>
@@ -117,7 +117,7 @@
                         </div>
 
                         
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Filet de turbot</h4>
@@ -133,9 +133,9 @@
                         </div>
                     
 
-                    <div class="menu__type fade-in--3">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Desserts</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Paris-Brest</h4>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Macaron au chocolat d'exception</h4>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Mousse au chocolat</h4>
