--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -39,9 +39,9 @@
                     <button type="submit" class="button__like"><i class="far fa-heart"></i></button>
                 </div>
                 <div class="menu__container">
-                    <div class="menu__type fade-in">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Entrées</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Tartare de thon</h4>
@@ -55,7 +55,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Bouchée de homard croustillant</h4>
@@ -69,7 +69,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Poulet rôti aux herbes de Provence</h4>
@@ -86,9 +86,9 @@
                         </div>
                     </div>
 
-                    <div class="menu__type fade-in--2">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Plats</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Poulet rôti aux herbes de Provence</h4>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Langouste rôtie</h4>
@@ -116,7 +116,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Côte de boeuf Angus</h4>
@@ -132,9 +132,9 @@
                         </div>
                     
 
-                    <div class="menu__type fade-in--3">
+                    <div class="menu__type">
                         <h3 class="menu-type__heading">Desserts</h3>
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Farandole de desserts</h4>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--2">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Crème brulée</h4>
@@ -162,7 +162,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-cards">
+                        <div class="menu-cards fade-in--3">
                             <div class="menu-cards__info">
                                 <div class="menu-cards__description">
                                     <h4>Tiramisu</h4>
