Modification du footer

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
             <div class="footer__container">
                 <h1 class="footer__container--logo">Ohmyfood</h1>
                 <ul class="footer__container--links white">
-                    <li><a class="footer__nav" href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
-                    <li><a class="footer__nav" href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
-                    <li><a class="footer__nav--info" href="#"></a>Mentions légales</li>
-                    <li><a class="footer__nav--info" href="contact@ohmyfood.fr"></a>Contact</li>
+                    <li><a class="footer__nav white" href="#"><i class="fas fa-utensils white footer__container--icon"></i>Proposer un restaurant</a></li>
+                    <li><a class="footer__nav white" href="#"><i class="fas fa-hands-helping white footer__container--icon"></i>Devenir partenaire</a></li>
+                    <li><a class="footer__nav--info white" href="#">Mentions légales</a></li>
+                    <li><a class="footer__nav--info white" href="mailto:contact@ohmyfood.fr">Contact</a></li>
                 </ul>
             </div>
         </footer>
