--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -193,10 +193,10 @@
         <div class="footer__container">
             <h1 class="footer__container--logo">Ohmyfood</h1>
             <ul class="footer__container--links white">
-                <li><a href="#"><i class="fas fa-utensils white footer__container--icon"></i></a>Proposer un restaurant</li>
-                <li><a href="#"><i class="fas fa-hands-helping white footer__container--icon"></i></a>Devenir partenaire</li>
-                <li><a href="#"></a>Mentions légales</li>
-                <li><a href="mailto:contact@ohmyfood.fr"></a>Contact</li>
+                <li><a class="footer__nav white" href="#"><i class="fas fa-utensils white footer__container--icon"></i>Proposer un restaurant</a></li>
+                    <li><a class="footer__nav white" href="#"><i class="fas fa-hands-helping white footer__container--icon"></i>Devenir partenaire</a></li>
+                    <li><a class="footer__nav--info white" href="#">Mentions légales</a></li>
+                    <li><a class="footer__nav--info white" href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </div>
     </footer>
